--- a/app/src/main/res/layout/fragment_listen_fill_blank.xml
+++ b/app/src/main/res/layout/fragment_listen_fill_blank.xml
@@ -31,6 +31,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/background_sentence"
+        android:padding="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
