--- a/app/src/main/res/layout/fragment_listen_choose_correct.xml
+++ b/app/src/main/res/layout/fragment_listen_choose_correct.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_progress" />
 
     <ImageButton
-        android:id="@+id/btn_listen"
+        android:id="@+id/btn_speak"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_listen"
+        app:layout_constraintTop_toBottomOf="@id/btn_speak"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
