--- a/app/src/main/res/layout/fragment_listen_fill_blank.xml
+++ b/app/src/main/res/layout/fragment_listen_fill_blank.xml
@@ -41,7 +41,7 @@
         tools:text="I am ______ English every day." />
 
     <ImageButton
-        android:id="@+id/btn_listen"
+        android:id="@+id/btn_speak"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
@@ -61,7 +61,7 @@
         android:hint="Nhập từ còn thiếu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_listen">
+        app:layout_constraintTop_toBottomOf="@id/btn_speak">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_answer"
