--- a/app/src/main/res/layout/fragment_lesson_list.xml
+++ b/app/src/main/res/layout/fragment_lesson_list.xml
@@ -9,7 +9,7 @@
         android:id="@+id/rv_lessons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/lesson_item"/>
+        tools:listitem="@layout/item_lesson"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
